Changes to be committed: 	modified:   .github/workflows/main_hostinger.yml
Changes not staged for commit:
	modified:   .github/workflows/main_hostinger.yml

--- a/.github/workflows/main_hostinger.yml
+++ b/.github/workflows/main_hostinger.yml
@@ -22,7 +22,8 @@ jobs:
         user: ${{ secrets.ftps_user }}
         pass: ${{ secrets.ftps_password }}
         localDir: './dist'
-        remoteDir: 'leo_portfolio/'
+        remoteDir: '/leo_portfolio'
         # server-dir: portifolio-react/
         port: 22 # todo replace with your web hosts ftps port
         # timeout: 120000 
+        reverse: true
