--- a/.github/workflows/main_hostinger.yml
+++ b/.github/workflows/main_hostinger.yml
@@ -22,7 +22,7 @@ jobs:
         user: ${{ secrets.ftps_user }}
         pass: ${{ secrets.ftps_password }}
         localDir: './dist'
-        remoteDir: '/leo_portfolio'
+        remoteDir: '/root/leo_portfolio'
         # server-dir: portifolio-react/
         port: 22 # todo replace with your web hosts ftps port
         # timeout: 120000 
