--- a/.github/workflows/main_hostinger.yml
+++ b/.github/workflows/main_hostinger.yml
@@ -18,9 +18,9 @@ jobs:
     - name: 📂 Sync files
       uses: pressidium/lftp-mirror-action@v1
       with:
-        host: ${{ secrets.ftps_host }}
-        user: ${{ secrets.ftps_user }}
-        pass: ${{ secrets.ftps_password }}
+        host: ${{ secrets.sftp_host }}
+        user: ${{ secrets.sftp_user }}
+        pass: ${{ secrets.sftp_password }}
         localDir: 'dist'
         remoteDir: 'root/leo_portfolio'
         # server-dir: portifolio-react/
