--- a/.github/workflows/main_hostinger.yml
+++ b/.github/workflows/main_hostinger.yml
@@ -21,7 +21,7 @@ jobs:
         host: ${{ secrets.sftp_host }}
         user: ${{ secrets.sftp_user }}
         pass: ${{ secrets.sftp_password }}
-        localDir: 'dist'
+        localDir: '.'
         remoteDir: 'root/leo_portfolio'
         # server-dir: portifolio-react/
         port: 22 # todo replace with your web hosts ftps port
