--- a/.github/workflows/main_hostinger.yml
+++ b/.github/workflows/main_hostinger.yml
@@ -10,10 +10,11 @@ jobs:
     steps:
     - name: 🚚 Get latest code
       uses: actions/checkout@v3
-    # - name: Install dependencies
-    #   run: npm install
-    # - name: Build TypeScript
-    #   run: npm run build
+    - name: Install dependencies
+      run: npm install
+
+    - name: Build TypeScript
+      run: npm run build
 
     - name: 📂 Sync files
       uses: pressidium/lftp-mirror-action@v1
