--- a/.github/workflows/main_hostinger.yml
+++ b/.github/workflows/main_hostinger.yml
@@ -22,9 +22,12 @@ jobs:
         host: ${{ secrets.sftp_host }}
         user: ${{ secrets.sftp_user }}
         pass: ${{ secrets.sftp_password }}
-        localDir: './dist'
+        localDir: './dist, ./docker-compose.yml, ./Dockerfile'
         remoteDir: 'leo_portfolio'
         # server-dir: portifolio-react/
         port: 22 # todo replace with your web hosts ftps port
         # timeout: 120000 
         reverse: true
+
+    - name: Build and start Docker Compose
+      run: docker-compose up -d
