--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -3,9 +3,9 @@ services:
   mysite:
     build:
       context: .
-      dockerfile: Dockerfile-nginx-mysite
+      dockerfile: Dockerfile
     expose:
-      - 80
+      - 91
 #    ports:
 #      - 801:801
 
