Changes to be committed: 	modified:   .github/workflows/main_hostinger.yml

--- a/.github/workflows/main_hostinger.yml
+++ b/.github/workflows/main_hostinger.yml
@@ -8,23 +8,23 @@ jobs:
     name: 🎉 Deploy
     runs-on: ubuntu-latest
     steps:
-    # - name: 🚚 Get latest code
-    #   uses: actions/checkout@v3
-    # - name: Install dependencies
-    #   run: npm install
+      - name: 🚚 Get latest code
+        uses: actions/checkout@v3
+      - name: Install dependencies
+        run: npm install
 
-    # - name: Build TypeScript
-    #   run: npm run build
+      - name: Build TypeScript
+        run: npm run build
 
-    - name: 📂 Sync files
-      uses: pressidium/lftp-mirror-action@v1
-      with:
-        host: ${{ secrets.sftp_host }}
-        user: ${{ secrets.sftp_user }}
-        pass: ${{ secrets.sftp_password }}
-        localDir: './dist, ./docker-compose.yml, ./Dockerfile'
-        remoteDir: 'leo_portfolio'
-        # server-dir: portifolio-react/
-        port: 22 # todo replace with your web hosts ftps port
-        # timeout: 120000 
-        reverse: true
+      - name: 📂 Sync files
+        uses: pressidium/lftp-mirror-action@v1
+        with:
+          host: ${{ secrets.sftp_host }}
+          user: ${{ secrets.sftp_user }}
+          pass: ${{ secrets.sftp_password }}
+          localDir: './dist, ./docker-compose.yml, ./Dockerfile'
+          remoteDir: 'leo_portfolio'
+          # server-dir: portifolio-react/
+          port: 22 # todo replace with your web hosts ftps port
+          # timeout: 120000 
+          reverse: true
