Changes to be committed: 	modified:   .github/workflows/main_hostinger.yml

--- a/.github/workflows/main_hostinger.yml
+++ b/.github/workflows/main_hostinger.yml
@@ -24,6 +24,6 @@ jobs:
           user: ${{ secrets.sftp_user }}
           pass: ${{ secrets.sftp_password }}
           port: ${{ secrets.sftp_port }}
-          localDir: './dist ./docker-compose.yml ./Dockerfile'
+          localDir: './dist docker-compose.yml Dockerfile'
           remoteDir: 'leo_portfolio' 
           # reverse: true
