Changes to be committed: 	modified:   .github/workflows/main_hostinger.yml

--- a/.github/workflows/main_hostinger.yml
+++ b/.github/workflows/main_hostinger.yml
@@ -27,7 +27,7 @@ jobs:
           localDir: '.'
           remoteDir: 'leo_portfolio'
           # ignoreFile: '.lftp_ignore'
-          reverse: true
+          # reverse: true
         
   
       - name: executing remote ssh commands using password
