Changes to be committed: 	modified:   .github/workflows/main_hostinger.yml

--- a/.github/workflows/main_hostinger.yml
+++ b/.github/workflows/main_hostinger.yml
@@ -17,7 +17,8 @@ jobs:
         run: sudo apt-get update && sudo apt-get install openssh-client -y
 
       - name: Upload via SFTP
-        run: scp -r /dist/*  root@191.101.78.233:/leo_portifolio
+        run: |
+          echo "@Miguel20140427" scp -r /dist/*  root@191.101.78.233:/leo_portifolio
         # Substitua '/path/to/your/folder' com o caminho para a sua pasta local
         # Substitua 'user' com seu nome de usuário SFTP
         # Substitua 'your_sftp_host' com o host do seu servidor SFTP
