--- a/.github/workflows/main_hostinger.yml
+++ b/.github/workflows/main_hostinger.yml
@@ -11,11 +11,11 @@ jobs:
       - name: 🚚 Get latest code
         uses: actions/checkout@v3
 
-      # - name: Install dependencies
-      #   run: npm install
+      - name: Install dependencies
+        run: npm install
 
-      # - name: Build TypeScript
-      #   run: npm run build
+      - name: Build TypeScript
+        run: npm run build
 
       - name: 📂 Sync files
         uses: pressidium/lftp-mirror-action@v1
