--- a/.github/workflows/main_hostinger.yml
+++ b/.github/workflows/main_hostinger.yml
@@ -39,18 +39,13 @@ jobs:
           remoteDir: 'leo_portifolio'
             # ignoreFile: '.lftp_ignore'
             # reverse: true
-      
-  
-
-    # - name: executing remote ssh commands using password
-    #   uses: appleboy/ssh-action@v1.0.0
-    #   with: 
-    #     host: ${{ secrets.sftp_host }}
-    #     username: ${{ secrets.sftp_user }}
-    #     password: ${{ secrets.sftp_password }}
-    #     port: ${{ secrets.sftp_port }}
-    #     script: |
-    #       cd leo_portfolio
-    #       npm install
-    #       npm run build
-    #       docker-compose up -d
+      - name: executing remote ssh commands using password
+        uses: appleboy/ssh-action@v1.0.0
+        with: 
+          host: ${{ secrets.sftp_host }}
+          username: ${{ secrets.sftp_user }}
+          password: ${{ secrets.sftp_password }}
+          port: ${{ secrets.sftp_port }}
+          script: |
+            cd leo_portfolio
+            docker-compose up -d
