Changes to be committed: 	modified:   .github/workflows/main_hostinger.yml

--- a/.github/workflows/main_hostinger.yml
+++ b/.github/workflows/main_hostinger.yml
@@ -46,4 +46,4 @@ jobs:
           port: ${{ secrets.sftp_port }}
           script: |
             cd leo-portfolio
-            docker-compose up -d
+            docker compose up -d
