Changes to be committed: 	modified:   .github/workflows/main_hostinger.yml

--- a/.github/workflows/main_hostinger.yml
+++ b/.github/workflows/main_hostinger.yml
@@ -45,5 +45,5 @@ jobs:
           password: ${{ secrets.sftp_password }}
           port: ${{ secrets.sftp_port }}
           script: |
-            cd leo-portfolio
+            cd leo-portifolio
             docker compose up -d
