--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,6 @@
 #version: "3.9"
 networks:
-  nginx_nginx_net:
+  nginx_network:
     # driver: bridge
     external: true
 
@@ -16,8 +16,8 @@ services:
       dockerfile: Dockerfile
     # expose:
     #   - 8001
-    ports:
-     - 8001:8001
+    # ports:
+    #  - 8001:8001
 
     volumes:
       - ./dist:/usr/share/nginx/html
