--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -23,6 +23,6 @@ services:
       - ./dist:/usr/share/nginx/html
 
     networks:
-      - nginx_nginx_net
+      - nginx_network
       # - nginx-network
 
