Changes to be committed: 	modified:   .github/workflows/main_hostinger.yml

--- a/.github/workflows/main_hostinger.yml
+++ b/.github/workflows/main_hostinger.yml
@@ -30,7 +30,7 @@ jobs:
           pass: ${{ secrets.sftp_password }}
           port: ${{ secrets.sftp_port }}
           localDir: './dist'
-          remoteDir: 'leo-portifolio'
+          remoteDir: 'leo-portifolio/dist'
         
       
          
