--- a/.github/workflows/main_hostinger.yml
+++ b/.github/workflows/main_hostinger.yml
@@ -19,6 +19,7 @@ jobs:
 
       - name: Prepare files
         run: |
+          mkdir leo-portifolio
           cp docker-compose.yml leo-portifolio/
           cp Dockerfile leo-portifolio/
           cp -r dist leo-portifolio/dist
