Changes to be committed: 	modified:   .github/workflows/main_hostinger.yml
Changes not staged for commit:
	modified:   .github/workflows/main_hostinger.yml
	modified:   vite.config.ts

--- a/.github/workflows/main_hostinger.yml
+++ b/.github/workflows/main_hostinger.yml
@@ -37,7 +37,8 @@ jobs:
           user: ${{ secrets.sftp_user }}
           pass: ${{ secrets.sftp_password }}
           port: ${{ secrets.sftp_port }}
-          localDir: "./leo-portifolio"
+          localDir: "."
+          # localDir: "./leo-portifolio"
           remoteDir: "leo-portifolio"
 
           # ignoreFile: '.lftp_ignore'
@@ -53,3 +54,7 @@ jobs:
           script: |
             cd leo-portifolio
             docker compose up -d
+
+          # script: |
+          #   cd leo-portifolio
+          #   docker compose up -d
