Changes to be committed: 	modified:   docker-compose.yml 	modified:   vite.config.ts

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -20,9 +20,8 @@ services:
     #  - 8001:8001
 
     volumes:
-      - ./dist:/usr/share/nginx/html
+      - ./dist:/usr/share/nginx/html/leo-portifolio
 
     networks:
       - nginx-network
       # - nginx-network
-
