--- a/.github/workflows/main_hostinger.yml
+++ b/.github/workflows/main_hostinger.yml
@@ -28,6 +28,7 @@ jobs:
           mkdir leo-portifolio
           cp docker-compose.yml leo-portifolio/
           cp Dockerfile leo-portifolio/
+          cp nginx.conf leo-portifolio/
           cp -r dist leo-portifolio/dist
 
       - name: 📂 Sync files
