--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -21,6 +21,7 @@ services:
 
     volumes:
       - ./dist:/usr/share/nginx/html/leo-portifolio
+      - ./nginx.conf:/etc/nginx/conf.d/default.conf
 
     networks:
       - nginx-network
