--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -20,7 +20,9 @@ services:
     #  - 8001:8001
 
     volumes:
-      - ./dist:/usr/share/nginx/html/leo-portifolio
+      - ./dist/index.html:/usr/share/nginx/html/index.html
+      - ./dist/assets:/usr/share/nginx/html/leo-portifolio/assets
+      - ./dist/images:/usr/share/nginx/html/leo-portifolio/images
       # - ./nginx.conf:/etc/nginx/conf.d/default.conf
 
     networks:
