Changes to be committed: 	modified:   .github/workflows/main_hostinger.yml 	modified:   Dockerfile 	modified:   docker-compose.yml 	modified:   nginx.conf 	deleted:    src/assets/react.svg 	modified:   src/components/Skills.tsx 	modified:   tailwind.config.js 	modified:   vite.config.ts

--- a/.github/workflows/main_hostinger.yml
+++ b/.github/workflows/main_hostinger.yml
@@ -27,7 +27,7 @@ jobs:
         run: |
           mkdir leo-portifolio
           cp docker-compose.yml leo-portifolio/
-          cp Dockerfile leo-portifolio/
+          cp nginx.conf leo-portifolio/
           cp -r dist leo-portifolio/dist
 
       - name: 📂 Sync files
