--- a/nginx.conf
+++ b/nginx.conf
@@ -1,9 +1,15 @@
 server {
     listen 80;
+    server_name localhost;
 
-    location / {
-        root /usr/share/nginx/html/leo-portfolio;
-        index index.html index.htm;
-        try_files $uri $uri/ =404;
+    location /leo-portifolio/ {
+        alias /usr/share/nginx/html/;
+        try_files $uri $uri/ /leo-portifolio/index.html;
     }
+
+    location /leo-portifolio/api/ {
+        # Configurações para a API, se aplicável
+    }
+
+    # Adicione outras configurações conforme necessário
 }
