--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,16 +13,15 @@ services:
   portifolio:
     build:
       context: .
-      dockerfile: Dockerfile
+      dockerfile: nginx:latest
     # expose:
     #   - 8001
     # ports:
     #  - 8001:8001
 
     volumes:
-      - ./dist/index.html:/usr/share/nginx/html/index.html
-      - ./dist/assets:/usr/share/nginx/html/leo-portifolio/assets
-      - ./dist/images:/usr/share/nginx/html/leo-portifolio/images
+      - ./nginx.conf:/etc/nginx/conf.d/default.conf
+      - ./dist:/usr/share/nginx/html
       # - ./nginx.conf:/etc/nginx/conf.d/default.conf
 
     networks:
