--- a/nginx.conf
+++ b/nginx.conf
@@ -1,6 +1,6 @@
 server {
     listen 80;
-    server_name localhost;
+    server_name leoproti.com.br;
 
     location /leo-portifolio/ {
         alias /usr/share/nginx/html/;
