Changes to be committed: 	modified:   nginx.conf

--- a/nginx.conf
+++ b/nginx.conf
@@ -1,15 +1,15 @@
 server {
     listen 80;
-    server_name leoproti.com.br;
+    server_name leoproti.com.br www.leoproti.com.br;
 
     location /leo-portifolio/ {
         alias /usr/share/nginx/html/;
         try_files $uri $uri/ /leo-portifolio/index.html;
     }
 
-    location /leo-portifolio/api/ {
-        # Configurações para a API, se aplicável
-    }
+    # location /leo-portifolio/api/ {
+    #     # Configurações para a API, se aplicável
+    # }
 
     # Adicione outras configurações conforme necessário
 }
