--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -22,7 +22,7 @@ services:
 
     volumes:
       - ./nginx.conf:/etc/nginx/conf.d/default.conf
-      - ./dist:/usr/share/nginx/html
+      - ./dist:/usr/share/nginx/html/leo-portifolio
       # - ./nginx.conf:/etc/nginx/conf.d/default.conf
 
     networks:
