--- a/nginx.conf
+++ b/nginx.conf
@@ -1,10 +1,10 @@
 server {
-    listen 80;
-    server_name leoproti.com.br www.leoproti.com.br;
-
+    listen       80;
+#     listen  [::]:80;
+#     server_name  localhost;
     location /leo-portifolio/ {
-        alias /usr/share/nginx/html/;
-        try_files $uri $uri/ /leo-portifolio/index.html;
+      alias /usr/share/nginx/html/leo-portifolio/;
+        try_files $uri $uri/ /index.html;
     }
 
     # location /leo-portifolio/api/ {
@@ -13,3 +13,53 @@ server {
 
     # Adicione outras configurações conforme necessário
 }
+
+
+# o arquivo da configuração estava em /etc/nginx/nginx.conf e /etc/nginx/sites-enabled/default. E o arquivo html em: /var/www/html .
+
+
+# server {
+#     listen       80;
+#     listen  [::]:80;
+#     server_name  localhost;
+
+#     #access_log  /var/log/nginx/host.access.log  main;
+
+#     location / {
+#         root   /usr/share/nginx/html;
+#         index  index.html index.htm;
+#     }
+
+#     #error_page  404              /404.html;
+
+#     # redirect server error pages to the static page /50x.html
+#     #
+#     error_page   500 502 503 504  /50x.html;
+#     location = /50x.html {
+#         root   /usr/share/nginx/html;
+#     }
+
+#     # proxy the PHP scripts to Apache listening on 127.0.0.1:80
+#     #
+#     #location ~ \.php$ {
+#     #    proxy_pass   http://127.0.0.1;
+#     #}
+
+#     # pass the PHP scripts to FastCGI server listening on 127.0.0.1:9000
+#     #
+#     #location ~ \.php$ {
+#     #    root           html;
+#     #    fastcgi_pass   127.0.0.1:9000;
+#     #    fastcgi_index  index.php;
+#     #    fastcgi_param  SCRIPT_FILENAME  /scripts$fastcgi_script_name;
+#     #    include        fastcgi_params;
+#     #}
+
+#     # deny access to .htaccess files, if Apache's document root
+#     # concurs with nginx's one
+#     #
+#     #location ~ /\.ht {
+#     #    deny  all;
+#     #}
+# }
+
