--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -23,7 +23,7 @@ services:
     volumes:
       # - ./default.conf:/etc/nginx/conf.d/default.conf
       - ./dist:/usr/share/nginx/html/leo-portifolio
-      # - ./nginx.conf:/etc/nginx/conf.d/default.conf
+      - ./nginx.conf:/etc/nginx/conf.d/default.conf
 
     networks:
       - nginx-network
