--- a/nginx.conf
+++ b/nginx.conf
@@ -2,9 +2,9 @@ server {
     listen       80;
 #     listen  [::]:80;
 #     server_name  localhost;
-    location /leo-portifolio/ {
+     location /leo-portifolio/ {
       alias /usr/share/nginx/html/leo-portifolio/;
-        try_files $uri $uri/ /index.html;
+      try_files $uri $uri/ /leo-portifolio/index.html;
     }
 
     # location /leo-portifolio/api/ {
