--- a/nginx.conf
+++ b/nginx.conf
@@ -1,7 +1,7 @@
 server {
     listen       80;
-#     listen  [::]:80;
-#     server_name  localhost;
+    listen  [::]:80;
+    server_name  localhost;
      location /leo-portifolio/ {
       alias /usr/share/nginx/html/leo-portifolio/;
       try_files $uri $uri/ /leo-portifolio/index.html;
