Changes to be committed: 	modified:   nginx.conf

--- a/nginx.conf
+++ b/nginx.conf
@@ -1,20 +1,18 @@
+
 server {
-    listen       80;
-    listen  [::]:80;
-    server_name  localhost;
-     location /leo-portifolio/ {
-      alias /usr/share/nginx/html/leo-portifolio/;
-      try_files $uri $uri/ /leo-portifolio/index.html;
+    listen 80;
+    server_name localhost;
+
+    location /leo-portifolio/ {
+        alias /usr/share/nginx/html/leo-portifolio/;
+        try_files $uri $uri/ /leo-portifolio/index.html;
     }
 
-    # location /leo-portifolio/api/ {
-    #     # Configurações para a API, se aplicável
-    # }
-
-    # Adicione outras configurações conforme necessário
+    error_page 500 502 503 504 /50x.html;
+    location = /50x.html {
+        root /usr/share/nginx/html;
+    }
 }
-
-
 # o arquivo da configuração estava em /etc/nginx/nginx.conf e /etc/nginx/sites-enabled/default. E o arquivo html em: /var/www/html .
 
 
