Changes to be committed: 	modified:   nginx.conf

--- a/nginx.conf
+++ b/nginx.conf
@@ -3,8 +3,9 @@ server {
     listen 80;
     server_name localhost;
 
+    
     location /leo-portifolio/ {
-        alias /usr/share/nginx/html/leo-portifolio/;
+        root /usr/share/nginx/html;
         try_files $uri $uri/ /leo-portifolio/index.html;
     }
 
