Changes to be committed: 	modified:   nginx.conf

--- a/nginx.conf
+++ b/nginx.conf
@@ -1,8 +1,9 @@
 
 server {
-    listen 80;
-    server_name localhost;
+    listen       80;
+    listen  [::]:80;
 
+    server_name leoproti.com.br;
     
     location /leo-portifolio/ {
         root /usr/share/nginx/html;
