Changes to be committed: 	modified:   nginx.conf

--- a/nginx.conf
+++ b/nginx.conf
@@ -5,9 +5,9 @@ server {
 
     server_name leoproti.com.br;
     
-    location /leo-portifolio/ {
-        root /usr/share/nginx/html;
-        try_files $uri $uri/ /leo-portifolio/index.html;
+    location / {
+        root /usr/share/nginx/html/leo-portifolio;
+        try_files $uri $uri/ /index.html;
     }
 
     error_page 500 502 503 504 /50x.html;
