Changes to be committed: 	renamed:    .github/workflows/main_gitpage.yml -> .github/workflows/gitpage.yml 	renamed:    .github/workflows/main_hostinger.yml -> .github/workflows/hostinger.yml 	new file:   .github/workflows/main.yml 	modified:   docker-compose.yml 	modified:   nginx.conf 	modified:   vite.config.ts

--- a/.github/workflows/hostinger.yml
+++ b/.github/workflows/hostinger.yml
@@ -1,8 +1,9 @@
+# .github/workflows/hostinger.yml
+name: Hostinger Workflow
+
 on:
-  push:
-    branches:
-      - main
-name: 🚀 Deploy website on push
+  repository_dispatch:
+    types: [start-hostinger]
 jobs:
   web-deploy:
     name: 🎉 Deploy
