--- a/nginx.conf
+++ b/nginx.conf
@@ -9,10 +9,15 @@ server {
     #     root /usr/share/nginx/html/leo-portifolio/;
     #     try_files $uri $uri/ /index.html;
     # }
-    
+
      location / {
-        root /usr/share/nginx/html;
-        try_files $uri $uri/ /leo-portifolio/index.html;
+        root /usr/share/nginx/html/leo-portifolio;
+        try_files $uri $uri/ /index.html;
+    }
+    
+   location / {
+        root /usr/share/nginx/html/leo-portifolio;
+        try_files $uri $uri/ /index.html;
     }
 
 
