--- a/.github/workflows/gitpage.yml
+++ b/.github/workflows/gitpage.yml
@@ -1,10 +1,10 @@
 # Simple workflow for deploying static content to GitHub Pages test
-name: Deploy static content to Pages
+# .github/workflows/gitpage.yml
+name: GitPage Workflow
 
 on:
-  # Runs on pushes targeting the default branch
-  push:
-    branches: ["main"]
+  repository_dispatch:
+    types: [start-gitpage]
 
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
