Changes to be committed: 	modified:   .github/workflows/gitpage.yml 	modified:   .github/workflows/hostinger.yml 	deleted:    .github/workflows/main.yml

--- a/.github/workflows/hostinger.yml
+++ b/.github/workflows/hostinger.yml
@@ -1,9 +1,10 @@
-# .github/workflows/hostinger.yml
 name: Hostinger Workflow
 
 on:
-  repository_dispatch:
-    types: [start-hostinger]
+  # push:
+  #   branches:
+  #     - main
+  workflow_dispatch:
 jobs:
   web-deploy:
     name: 🎉 Deploy
