--- a/.github/workflows/gitpage.yml
+++ b/.github/workflows/gitpage.yml
@@ -1,10 +1,10 @@
-# Simple workflow for deploying static content to GitHub Pages test
 # .github/workflows/gitpage.yml
 name: GitPage Workflow
 
 on:
-  repository_dispatch:
-    types: [start-gitpage]
+  #   push:
+  #     branches:
+  #       - main
 
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
