--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -22,7 +22,7 @@ services:
 
     volumes:
       # - ./default.conf:/etc/nginx/conf.d/default.conf
-      - ./dist:/usr/share/nginx/html/leo-portifolio/
+      - ./dist:/usr/share/nginx/html/
       # - ./nginx.conf:/etc/nginx/conf.d/default.conf
 
     networks:
