Changes to be committed: 	modified:   .github/workflows/hostinger.yml

--- a/.github/workflows/hostinger.yml
+++ b/.github/workflows/hostinger.yml
@@ -32,18 +32,29 @@ jobs:
           cp nginx.conf leo-portifolio/
           cp -r dist leo-portifolio/dist
 
-      - name: 📂 Sync files
-        uses: pressidium/lftp-mirror-action@v1
+      - name: Copy files
+        uses: appleboy/scp-action@v0.1.4
         with:
           host: ${{ secrets.sftp_host }}
-          user: ${{ secrets.sftp_user }}
-          pass: ${{ secrets.sftp_password }}
+          username: ${{ secrets.sftp_user }}
+          key: ${{ secrets.sftp_private_key }}
           port: ${{ secrets.sftp_port }}
-          localDir: "./leo-portifolio"
-          remoteDir: "leo-portifolio"
+          source: "./leo-portifolio"
+          target: "/"
+          overwrite: true
 
-          # ignoreFile: '.lftp_ignore'
-          # reverse: true
+      # - name: 📂 Sync files
+      #   uses: pressidium/lftp-mirror-action@v1
+      #   with:
+      #     host: ${{ secrets.sftp_host }}
+      #     user: ${{ secrets.sftp_user }}
+      #     pass: ${{ secrets.sftp_password }}
+      #     port: ${{ secrets.sftp_port }}
+      #     localDir: "./leo-portifolio"
+      #     remoteDir: "leo-portifolio"
+
+      # ignoreFile: '.lftp_ignore'
+      # reverse: true
 
       - name: executing remote ssh commands using password
         uses: appleboy/ssh-action@v1.0.0
